--- a/First_App/src/main/webapp/index.html
+++ b/First_App/src/main/webapp/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
- <title>Dynamic Example</title>
- <body>
- <form action="DynamicServlet.do" method="get">
- <div>
- <input type="text" name="username" />
- <input type="submit" value="Go!" />
- </div>
- </form>
- </body>
+ 	<title>Index</title>
+ 	<body>
+ 		<a href="les2.html">Les 2</a>
+ 		<br>
+ 		<a href="les4.html">Les 4</a>
+ 		<br>
+ 		<a href="Rekenmachine.html">Rekenmachine</a>
+ 		<br>
+ 		<a href="les5.html">Les 5</a>
+ 		<br>
+ 	</body> 
+
 </html>
