--- a/First_App/src/main/webapp/les5.html
+++ b/First_App/src/main/webapp/les5.html
@@ -6,7 +6,7 @@
 		 <div id="frame">
 		 
 		 <div id="myLocation">
-		 <h1>Mijn locatie</h1>
+		 <h1 id="myCity">Mijn locatie</h1>
 		 <p>Landcode</p>
 		 <label id="landcode"></label><br>
 		 <p>Land</p>
