--- a/First_App/src/main/webapp/index.html
+++ b/First_App/src/main/webapp/index.html
@@ -10,6 +10,9 @@
  		<br>
  		<a href="les5.html">Les 5</a>
  		<br>
+ 		<a href="oefeningSynchronisatie.html">Oefening synchronisatie (Les 6, practicum 1)</a>
+ 		<br>
+ 		<a href="oefeningSynchronisatie2.html">Oefening synchronisatie 2 (Les 6, practicum 1)</a>
  	</body> 
 
 </html>
