--- a/First_App/src/main/webapp/les5.html
+++ b/First_App/src/main/webapp/les5.html
@@ -2,6 +2,7 @@
 <html>
  	<title>Les 5</title>
  	<link rel="stylesheet" type="text/css" href="style/les5.css">
+ 	<meta name="viewport" content="width=device-width, initial-scale=1">
  	<body>
 		 <div id="frame">
 		 
@@ -39,8 +40,10 @@
 		 <label id="zonsondergang"></label><br>
 		 </div>
 		 
-		 <div id="countryList"></div>
-		 <h1>Beschikbare Vakantiebestemmingen</h1>
+		 
+		 <div id="countryList">
+		 <h1>Beschikbare Vakantiebestemmingen</h1>	 
+		 <div style="overflow-x:auto;">
 		 <table id="table" border="1">
 		 <tr>
 		 <th>Land</th>
@@ -50,6 +53,8 @@
 		 <th>Inwoners</th>
 		 </tr>
 		 </table>
+		 </div>
+		 </div>
 		 </div>
 		 
 		 
