--- a/First_App/src/main/webapp/les5.html
+++ b/First_App/src/main/webapp/les5.html
@@ -39,10 +39,16 @@
 		 <p>Zonsondergang</p>
 		 <label id="zonsondergang"></label><br>
 		 </div>
-		 
+		
 		 
 		 <div id="countryList">
-		 <h1>Beschikbare Vakantiebestemmingen</h1>	 
+		 <h1>Beschikbare Vakantiebestemmingen</h1>
+		 	 
+		 <form id="PUTform">
+		 <table id="wijzigform">
+		 </table>
+		 </form>
+		 
 		 <div style="overflow-x:auto;">
 		 <table id="table" border="1">
 		 <tr>
@@ -57,8 +63,9 @@
 		 </div>
 		 </div>
 		 
+		 <h1>Bestemming toevoegen</h1>
 		 
-		 
+
 		 <!-- Hier komen jouw script-tags -->
 		 <script src = "javascript/les5.js"></script>
 		 <script>
