--- a/First_App/src/main/webapp/les5.html
+++ b/First_App/src/main/webapp/les5.html
@@ -64,7 +64,25 @@
 		 </div>
 		 
 		 <h1>Bestemming toevoegen</h1>
-		 
+		 <form id="form2">
+		 <label>Code</label>
+		 <input type="text" name="code"></input><br>
+		 <label>Naam</label>
+		 <input type="text" name="name"></input><br>
+		 <label>Continent</label>
+		 <input type="text" name="continent"></input><br>
+		 <label>Regio</label>
+		 <input type="text" name="region"></input><br>
+		 <label>Surface</label>
+		 <input type="number" name="surfacearea"></input><br>
+		 <label>Inwoners</label>
+		 <input type="number" name="population"></input><br>
+		 <label>Overheidsvorm</label>
+		 <input type="text" name="governmentform"></input><br>
+		 <label>Hoofdstad</label>
+		 <input type="text" name="capital"></input><br>
+		 <input type="button" id="post" value="Opslaan"></input>
+		 </form>
 
 		 <!-- Hier komen jouw script-tags -->
 		 <script src = "javascript/les5.js"></script>
