--- a/First_App/src/main/webapp/index.html
+++ b/First_App/src/main/webapp/index.html
@@ -13,6 +13,8 @@
  		<a href="oefeningSynchronisatie.html">Oefening synchronisatie (Les 6, practicum 1)</a>
  		<br>
  		<a href="oefeningSynchronisatie2.html">Oefening synchronisatie 2 (Les 6, practicum 1)</a>
+ 		<br>
+ 		<a href="inloggen.html">Inloggen</a>
  	</body> 
 
 </html>
